tests/core/snapshots/apollo-tracing.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  hello: String! @http(url: "http://api.com/")
}
