tests/core/snapshots/grpc-json.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type News {
  body: String!
  id: Int!
  postImage: String!
  title: String!
}

input NewsInput {
  id: Int
}

type Query {
  newsById: News!
  newsByIdMustache(news: NewsInput!): News!
  newsByIdMustacheAndJson(news: NewsInput!): News!
}

schema {
  query: Query
}
